<resources>
    <string name="app_name">Study Buddy</string>

    <string name="buddy">My Buddy</string>
    <string name="courses">Courses</string>
    <string name="assign">Assignments</string>
    <string name="grades">Grades</string>
    <string name="cal">Calender</string>
    <string name="timer">Timer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">DONT PRESS</string>

    <string name="action_settings">Settings</string>


    <string name="classesList">Courses</string>
    <string name="credits">Credits</string>
    <string name="percentIn">Percent In</string>
    <string name="Grade">Grades</string>
    <string name="GPA">GPA</string>
    <string name="maxFinal">Max Final Grade</string>
    <string name="minFinal">Min Final Grade</string>
    <string name="total1">Total</string>
    <string name="title_activity_grades">Grades</string>
    <string name="add_class_button_text">Add Class</string>
    <string name="add_assignment_button_text">Add Assignment</string>
    <string name="edit_assignments_button_text">Edit Assignments</string>
    <string name="edit_class_button_text">Edit Courses</string>
    <string name="AddAssignmentText">AddAssignment</string>
    <string name="EditAssignmentText">Edit Assignments</string>
    <string name="AddClassText">Add Class</string>
    <string name="EditClassesText">Edit Classes</string>
    <string name="add_class_ADD_button">ADD</string>
    <string name="add_class_title">Title</string>
    <string name="add_class_credits">Credits</string>
    <string name="add_class_title_text">Add Class</string>
    <string name="add_assignment_title_text">Add Assignment</string>
    <string name="add_assignment_ADD_button">ADD</string>
    <string name="add_assignment_title">Assignment Name</string>
    <string name="add_assignment_class_name">Course Name</string>
    <string name="add_assignment_percent_of_grade">Percent Of Grade</string>
    <string name="add_assignment_score">Grade Received</string>
</resources>
