<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_class_title_text"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:textStyle="bold"
        android:id="@+id/addClassTextView" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:id="@+id/add_class_space3"
        android:layout_below="@id/addClassTextView"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:text="@string/add_class_ADD_button"
        android:id="@+id/addClassADDbutton"
        android:layout_below="@+id/add_class_space3"
        android:textSize="30sp"
        android:layout_centerHorizontal="true" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/add_class_space1"
        android:layout_below="@id/addClassADDbutton"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_class_space1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/add_class_title"
        android:textSize="30sp"
        android:id="@+id/add_class_title" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/add_class_space2"
        android:layout_below="@id/add_class_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:layout_below="@+id/add_class_space2"
        android:id="@+id/add_class_credits"
        android:textSize="30sp"
        android:hint="@string/add_class_credits"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
